--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Purephp by elfet</title>
+    <title>PurePHP by elfet</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -15,15 +15,14 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Purephp</h1>
+        <h1>PurePHP</h1>
         <p>PurePHP Key-Value Storage</p>
 
         <p class="view"><a href="https://github.com/elfet/purephp">View the Project on GitHub <small>elfet/purephp</small></a></p>
 
 
         <ul>
-          <li><a href="https://github.com/elfet/purephp/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/elfet/purephp/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://elfet.github.io/purephp/pure.phar">Download <strong>PHAR</strong></a></li>
           <li><a href="https://github.com/elfet/purephp">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
