--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
         <ul>
           <li><a href="https://elfet.github.io/purephp/pure.phar">Download <strong>PHAR</strong></a></li>
+          <li><a href="https://github.com/elfet/purephp/star">Download <strong>Star</strong></a></li>
           <li><a href="https://github.com/elfet/purephp">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
