--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>PurePHP by elfet</title>
+    <title>PurePHP Key-Value Storage</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -23,7 +23,7 @@
 
         <ul>
           <li><a href="https://elfet.github.io/purephp/pure.phar">Download <strong>PHAR</strong></a></li>
-          <li><a href="https://github.com/elfet/purephp/star">Download <strong>Star</strong></a></li>
+          <li><a href="https://github.com/elfet/purephp/star"><strong>Star</strong></a></li>
           <li><a href="https://github.com/elfet/purephp">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
